reorganized everything and C/S should work

--- a/.gitignore
+++ b/.gitignore
@@ -47,5 +47,5 @@ package-lock.json
 yarn.lock
 
 # plugin
-/plugin/shelf/
-/plugin/workspace.xml
+/pasting/worldDownloaderPlugin/shelf
+/pasting/worldDownloaderPlugin/workspace.xml
