--- a/.github/workflows/build-client.yml
+++ b/.github/workflows/build-client.yml
@@ -3,13 +3,15 @@
 # certain platforms or Java versions, and provides a first line of defence
 # against bad commits.
 
-name: build
+name: build-client
 on: [pull_request, push]
 
 jobs:
   build:
     runs-on: ubuntu-24.04
     steps:
+      - name: go to addon folder
+        run: cd downloading/client
       - name: checkout repository
         uses: actions/checkout@v4
       - name: validate gradle wrapper
@@ -27,4 +29,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Artifacts
-          path: build/libs/
+          path: downloading/client/build/libs/
